# MyClassString

./: .gitignore  CMakeLists.txt  ExecMoiBg  Makefile
include/: lib_made.hpp  lib_std.hpp  my_string.hpp
include/my_string/: my_string.hpp
lib/: my_strtools.cpp
my_string/: main.cpp  my_string_tools.cpp
src/: 1st_Cpp.cpp
